--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,4 +1,5 @@
 name: NodeJS SDK Wrapper CI
+
 on:
   pull_request:
     branches:
@@ -14,17 +15,17 @@ env:
 
 jobs:
   smartui-nodejs-sdk:
-    name: Execute NodeJS sdk build
+    name: Execute NodeJS SDK Build
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
-        if: github.event_name == 'pull_request'
         uses: actions/checkout@v3
         with:
           ref: ${{ github.head_ref }}
 
       - name: Execute NodeJS Wrapper
         run: |
-          npm i
+          npm install
           npx smartui --version
           npx smartui exec node test.js --config smartui-web.json
