--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,31 +1,64 @@
-name: NodeJS SDK Wrapper CI
+name: Test Storybook with SmartUI
 
 on:
+  push:
+    branches: ["main"]
   pull_request:
-    branches:
-      - main
-  workflow_dispatch:
-
-env:
-  LT_USERNAME: ${{ secrets.LT_USERNAME }}
-  LT_ACCESS_KEY: ${{ secrets.LT_ACCESS_KEY }}
-  PROJECT_TOKEN: ${{ secrets.PROJECT_TOKEN }}
-  LT_SDK_DEBUG: true
-  SMARTUI_DEBUG: true
+    branches: ["main"]
 
 jobs:
-  smartui-nodejs-sdk:
-    name: Execute NodeJS SDK Build
+  build:
     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ github.head_ref }}
+    strategy:
+      matrix:
+        node-version: [20.x]
 
-      - name: Execute NodeJS Wrapper
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Create commit status
+        env:
+          PROJECT_TOKEN: ${{ secrets.PROJECT_TOKEN }}
         run: |
-          npm install
-          npx smartui --version
+          API_HOST=https://api.github.com
+          OWNER=$(echo $GITHUB_REPOSITORY | cut -d'/' -f1)
+          REPO=$(echo $GITHUB_REPOSITORY | cut -d'/' -f2)
+          git checkout $GITHUB_HEAD_REF
+          COMMIT_ID=$(git rev-parse HEAD)
+          echo "Last commit ID of PR: $COMMIT_ID"
+          REF=$GITHUB_SHA
+          echo "Current Commit ID REF : $REF"
+          GITHUB_URL=$API_HOST/repos/$GITHUB_REPOSITORY/statuses/$COMMIT_ID
+          echo "GITHUB_URL: $GITHUB_URL"
+          echo "GITHUB_URL=$GITHUB_URL" >> $GITHUB_ENV
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm i
+
+      - name: Install Lambda CLI
+        run: npm install @lambdatest/smartui-storybook -g
+
+      - name: Run Storybook
+        run: npm run build-storybook
+
+      - name: Give some time to start the Storybook server
+        run: |
+          echo "Start sleeping..."
+          sleep 30  # Sleep for 30 seconds
+          echo "Done sleeping."
+
+      - name: Upload screenshots
+        env:
+          PROJECT_TOKEN: ${{ secrets.PROJECT_TOKEN }}
+        id: upload_screenshots
+        run: |
           npx smartui exec node test.js --config smartui-web.json
+
+        continue-on-error: true
